# openf1-data-project

./: .env.example  .gitignore  Dockerfile  README.md  dbt_project.yml  docker-compose.yaml  main.py  profiles.yml.example  pyproject.toml  requirements.txt
dags/: ingest_f1_cars.py  ingest_f1_drivers.py  ingest_f1_intervals.py  test_dbt_connection.py
models/staging/openf1/: _open_f1__sources.yml  stg_open_f1__drivers.sql
scripts/: config.py  export_to_parquet.py  setup_database.py  utils.py
